whitespace fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -124,9 +124,11 @@
   }
   body {
     @apply bg-background text-foreground;
+    
   }
   html {
     @apply font-nunito;
+    scroll-behavior: smooth;
   }
 }
 
